feat(prophecy/units): Add basic prophecies retrieval and save
